--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </style>
 </head>
 <body class="bg-gray-100">
-    <div id="premium-section" class="p-5 bg-green-700 rounded-lg shadow-lg mt-5">
+    <div id="premium-section" class="p-5 bg-black rounded-lg shadow-lg mt-5">
         <div class="button-container">
 
     <!-- Profile Section -->
