--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>Sky Dev Ops</title>
     <style>
         /* CSS untuk judul h2 */
@@ -274,40 +275,7 @@ body {
             </div>
         </div>
         <a href="kegiatan.html" class="premium-button absolute top-0 right-0 mt-3 mr-3 sm:mr-5 sm:mt-5 glass-effect">Premium aplikasi kegiatan</a>
-        <div class="flex justify-center flex-wrap mt-11 ml-auto glass-effect">
-            <button id="expand-button" class="icon-button neon">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div id="menu" class="menu">
-                <a href="index.html" class="icon-button neon">
-                    <i class="fas fa-home"></i>
-                </a>
-                <a href="kalku.html" class="icon-button neon">
-                    <i class="fas fa-calculator"></i>
-                </a>
-                <a href="kalender.html" class="icon-button neon">
-                    <i class="far fa-calendar-alt"></i>
-                </a>
-                <a href="solat.html" class="icon-button neon">
-                    <i class="fas fa-praying-hands"></i>
-                </a>
-                <a href="marketplace.html" class="icon-button neon">
-                    <i class="fas fa-shopping-cart"></i>
-                </a>
-                <a href="musik.html" class="icon-button neon">
-                    <i class="fas fa-music"></i>
-                </a>
-                <a href="elearning.html" class="icon-button neon">
-                    <i class="fas fa-book"></i>
-                </a>
-                <a href="alquran.html" class="icon-button neon">
-                    <i class="fas fa-quran"></i>
-                </a>
-                <a href="translate.html" class="icon-button neon">
-                    <i class="fas fa-language"></i>
-                </a>
-            </div>
-        </div>
+      
     </div>
 </div>
 
@@ -315,6 +283,7 @@ body {
  <div class="p-5 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4"
  style="background-image: url('bg1.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
 <!-- Contact Section -->
+
 <div class="flex flex-col glass-effect rounded-lg shadow-lg p-6">
     <h2 class="text-lg font-poppins font-bold text-blue-500">My Contact</h2>
     <div class="border-2 w-20 border-blue-500 my-3"></div>
@@ -423,6 +392,40 @@ body {
     </div>
 </div>
 </div>
+<div class="flex justify-center flex-wrap mt-11 ml-auto glass-effect">
+    <button id="expand-button" class="icon-button neon">
+        <i class="fas fa-bars"></i>
+    </button>
+    <div id="menu" class="menu">
+        <a href="index.html" class="icon-button neon">
+            <i class="fas fa-home"></i>
+        </a>
+        <a href="kalku.html" class="icon-button neon">
+            <i class="fas fa-calculator"></i>
+        </a>
+        <a href="kalender.html" class="icon-button neon">
+            <i class="far fa-calendar-alt"></i>
+        </a>
+        <a href="solat.html" class="icon-button neon">
+            <i class="fas fa-praying-hands"></i>
+        </a>
+        <a href="marketplace.html" class="icon-button neon">
+            <i class="fas fa-shopping-cart"></i>
+        </a>
+        <a href="musik.html" class="icon-button neon">
+            <i class="fas fa-music"></i>
+        </a>
+        <a href="elearning.html" class="icon-button neon">
+            <i class="fas fa-book"></i>
+        </a>
+        <a href="alquran.html" class="icon-button neon">
+            <i class="fas fa-quran"></i>
+        </a>
+        <a href="translate.html" class="icon-button neon">
+            <i class="fas fa-language"></i>
+        </a>
+</div>
+</div>
 </div>
 
 <!-- Skills Section -->
@@ -525,6 +528,16 @@ body {
     }
 });
 
+    </script>
+    <script>
+        document.getElementById('expand-button').addEventListener('click', function() {
+            var menu = document.getElementById('menu');
+            if (menu.classList.contains('hidden')) {
+                menu.classList.remove('hidden');
+            } else {
+                menu.classList.add('hidden');
+            }
+        });
     </script>
 </body>
 </html>
