--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>Sky Dev Ops</title>
     <style>
+        .menu {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 16px; /* Atur jarak antar tombol sesuai kebutuhan */
+}
+
+.icon-button {
+    /* Atur gaya tombol sesuai kebutuhan */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 8px;
+    text-align: center;
+}
+
         /* CSS untuk judul h2 */
         h2 {
     position: relative;
@@ -396,7 +412,7 @@ body {
     <button id="expand-button" class="icon-button neon">
         <i class="fas fa-bars"></i>
     </button>
-    <div id="menu" class="menu">
+    <div id="menu" class="menu grid grid-cols-3 gap-4 mt-4">
         <a href="index.html" class="icon-button neon">
             <i class="fas fa-home"></i>
         </a>
@@ -424,9 +440,9 @@ body {
         <a href="translate.html" class="icon-button neon">
             <i class="fas fa-language"></i>
         </a>
+    </div>
 </div>
-</div>
-</div>
+
 
 <!-- Skills Section -->
 <div class="flex flex-col">
