--- a/index.html
+++ b/index.html
@@ -419,38 +419,40 @@ body {
 </div>
 <div class="flex justify-center flex-wrap mt-11 ml-auto glass-effect">
     <button id="expand-button" class="icon-button neon">
+    
         <i class="fas fa-bars"></i>
     </button>
-    <div id="menu" class="menu grid grid-cols-3 gap-4 mt-4">
-        <a href="index.html" class="icon-button neon">
-            <i class="fas fa-home"></i>
-        </a>
-        <a href="kalku.html" class="icon-button neon">
-            <i class="fas fa-calculator"></i>
-        </a>
-        <a href="kalender.html" class="icon-button neon">
-            <i class="far fa-calendar-alt"></i>
-        </a>
-        <a href="solat.html" class="icon-button neon">
-            <i class="fas fa-praying-hands"></i>
-        </a>
-        <a href="marketplace.html" class="icon-button neon">
-            <i class="fas fa-shopping-cart"></i>
-        </a>
-        <a href="musik.html" class="icon-button neon">
-            <i class="fas fa-music"></i>
-        </a>
-        <a href="elearning.html" class="icon-button neon">
-            <i class="fas fa-book"></i>
-        </a>
-        <a href="alquran.html" class="icon-button neon">
-            <i class="fas fa-quran"></i>
-        </a>
-        <a href="translate.html" class="icon-button neon">
-            <i class="fas fa-language"></i>
-        </a>
+    <div class="menu-container">
+        <div id="menu">
+            <a href="index.html" class="icon-button neon">
+                <i class="fas fa-home"></i>
+            </a>
+            <a href="kalku.html" class="icon-button neon">
+                <i class="fas fa-calculator"></i>
+            </a>
+            <a href="kalender.html" class="icon-button neon">
+                <i class="far fa-calendar-alt"></i>
+            </a>
+            <a href="solat.html" class="icon-button neon">
+                <i class="fas fa-praying-hands"></i>
+            </a>
+            <a href="marketplace.html" class="icon-button neon">
+                <i class="fas fa-shopping-cart"></i>
+            </a>
+            <a href="musik.html" class="icon-button neon">
+                <i class="fas fa-music"></i>
+            </a>
+            <a href="elearning.html" class="icon-button neon">
+                <i class="fas fa-book"></i>
+            </a>
+            <a href="alquran.html" class="icon-button neon">
+                <i class="fas fa-quran"></i>
+            </a>
+            <a href="translate.html" class="icon-button neon">
+                <i class="fas fa-language"></i>
+            </a>
+        </div>
     </div>
-</div>
 
 
 <!-- Skills Section -->
@@ -561,6 +563,16 @@ body {
                 menu.classList.remove('hidden');
             } else {
                 menu.classList.add('hidden');
+            }
+        });
+    </script>
+            <script>
+        document.getElementById('expand-button').addEventListener('click', function() {
+            var menu = document.getElementById('menu');
+            if (menu.style.display === 'none' || menu.style.display === '') {
+                menu.style.display = 'grid';
+            } else {
+                menu.style.display = 'none';
             }
         });
     </script>
