--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ style="background-image: url('bg1.jpg'); background-size: cover; background-posi
 
  <!-- Navigation Buttons -->
  <div class="p-5 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4"
- style="background-image: url('bg1.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+ style="background-image: url('j.jpeg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
 <!-- Contact Section -->
 
 <div class="flex flex-col glass-effect rounded-lg shadow-lg p-6">
