--- a/index.html
+++ b/index.html
@@ -286,6 +286,21 @@ body {
 <div class="flex flex-col items-center justify-center bg-gray-100 h-64 p-6 rounded-lg shadow-lg mb-4 relative"
 style="background-image: url('bg1.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
 
+
+
+<div class="flex flex-col sm:flex-row items-center bg-very-dark-gray-500 p-5 rounded-t-lg">
+    <div class="h-40 w-40 overflow-hidden rounded-full neon-animation">
+        <img src="profil.jpg" alt="Profile Picture" class="object-cover h-full w-full">
+    </div>
+    <div class="line-animation flex flex-col sm:flex-row items-center sm:ml-5 mt-5 sm:mt-0 text-white">
+        <div class="text-center sm:text-left">
+            <!-- Konten profil Anda -->
+            <h2 class="font-bold text-lg text-white">RISKY DEV</h2>
+            <p>menjauh dari orang yang sangat butuh validasi</p>
+        </div>
+    </div>
+    
+</div>
 <!-- Profile Section Content -->
 <div class="absolute top-0 right-0 mt-3 mr-3 sm:mr-5 sm:mt-5">
     <a href="kegiatan.html" class="premium-button absolute top-0 right-0 mt-3 mr-3 sm:mr-5 sm:mt-5 glass-effect text-white ">Premium aplikasi kegiatan</a>
@@ -302,20 +317,6 @@ style="background-image: url('bg1.jpg'); background-size: cover; background-posi
         <a href="alquran.html" class="glass-effect"><i class="fas fa-quran"></i></a>
         <a href="translate.html" class="glass-effect"><i class="fas fa-language"></i></a>
     </div>
-</div>
-
-<div class="flex flex-col sm:flex-row items-center bg-very-dark-gray-500 p-5 rounded-t-lg">
-    <div class="h-40 w-40 overflow-hidden rounded-full neon-animation">
-        <img src="profil.jpg" alt="Profile Picture" class="object-cover h-full w-full">
-    </div>
-    <div class="line-animation flex flex-col sm:flex-row items-center sm:ml-5 mt-5 sm:mt-0 text-white">
-        <div class="text-center sm:text-left">
-            <!-- Konten profil Anda -->
-            <h2 class="font-bold text-lg text-white">RISKY DEV</h2>
-            <p>bukan masalah hidup tidak adil ,anda aja yg kurang bersyukur.</p>
-        </div>
-    </div>
-    
 </div>
 </div>
 <div class="p-5 grid grid-cols-2 md:grid-cols-3 gap-4" style="background-image: url('p.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
