--- a/index.html
+++ b/index.html
@@ -295,11 +295,12 @@ style="background-image: url('bg1.jpg'); background-size: cover; background-posi
     <div class="line-animation flex flex-col sm:flex-row items-center sm:ml-5 mt-5 sm:mt-0 text-white">
         <div class="text-center sm:text-left">
             <!-- Konten profil Anda -->
+            <div class="glass-effect">
             <h2 class="font-bold text-lg text-white">RISKY DEV</h2>
             <p>menjauh dari orang yang sangat butuh validasi</p>
         </div>
     </div>
-    
+</div>
 </div>
 <!-- Profile Section Content -->
 <div class="absolute top-0 right-0 mt-3 mr-3 sm:mr-5 sm:mt-5">
