--- a/skyprivatehtml.html
+++ b/skyprivatehtml.html
@@ -45,8 +45,8 @@
 
       const allowedUsers = {
         "user1@gmail.com": "password1",
-        "user2": "password2",
-        "user3": "password3"
+        "user2@gmail.com": "password2",
+        "user3@gmail.com": "password3"
       };
 
       document.getElementById("login-button").addEventListener("click", () => {
