--- a/skyprivate.html
+++ b/skyprivate.html
@@ -26,7 +26,7 @@
 
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-      import { getStorage, ref, uploadBytes, listAll, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-storage.js";
+      import { getStorage, ref, uploadBytes, listAll, getDownloadURL, deleteObject } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-storage.js";
       import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
 
       const firebaseConfig = {
@@ -36,8 +36,7 @@
         storageBucket: "musik-bc516.appspot.com",
         messagingSenderId: "630518202610",
         appId: "1:630518202610:web:9a73d20e81f162c870106b",
-};
-
+      };
 
       const app = initializeApp(firebaseConfig);
       const storage = getStorage(app);
@@ -46,7 +45,7 @@
       const allowedUsers = {
         "user1@gmail.com": "password1",
         "user2@gmail.com": "password2",
-        "user3@gmail.com": "password3"
+        "user3": "password3"
       };
 
       document.getElementById("login-button").addEventListener("click", () => {
@@ -59,6 +58,7 @@
             const user = userCredential.user;
             document.getElementById("login-section").classList.add("hidden");
             document.getElementById("music-section").classList.remove("hidden");
+            displayMusicList();
           })
           .catch((error) => {
             const errorCode = error.code;
@@ -89,6 +89,7 @@
               const link = document.createElement("a");
               const playButton = document.createElement("button");
               const stopButton = document.createElement("button");
+              const deleteButton = document.createElement("button");
 
               link.href = url;
               link.textContent = itemRef.name;
@@ -106,9 +107,16 @@
                 stopMusic();
               });
 
+              deleteButton.textContent = "Delete";
+              deleteButton.classList.add("ml-2", "bg-gray-500", "text-white", "py-1", "px-2", "rounded");
+              deleteButton.addEventListener("click", () => {
+                deleteMusic(itemRef);
+              });
+
               li.appendChild(link);
               li.appendChild(playButton);
               li.appendChild(stopButton);
+              li.appendChild(deleteButton);
               list.appendChild(li);
             });
           });
@@ -130,17 +138,22 @@
         });
       }
 
-      function pauseMusic() {
-        if (currentAudio) {
-          currentAudio.pause();
-        }
-      }
-
       function stopMusic() {
         if (currentAudio) {
           currentAudio.pause();
           currentAudio.currentTime = 0;
         }
+      }
+
+      function deleteMusic(itemRef) {
+        const storageRef = ref(storage, itemRef.fullPath);
+        deleteObject(storageRef).then(() => {
+          console.log("File deleted successfully!");
+          displayMusicList();
+        }).catch((error) => {
+          console.error("Error deleting file:", error);
+          alert("Error deleting file. Please check console for details.");
+        });
       }
 
       window.onload = displayMusicList;
